# debuggingbook

./: .gitignore  BADGES.md  CITATION.cff  Chapters.makefile  Makefile  README.md  _config.yml  _toc.yml  fuzzingbook.bib  ipypublish  ipypublish_plugins  pyproject.toml  requirements.txt  utils
.github/workflows/: check-code.yml  check-imports.yml  check-notebooks.yml  check-sitemap.yml  check-types.yml  check.yml  html.yml
_static/: custom.css
beta/code/: debuggingbook_utils
beta/html/: PICS
beta/python_code/: LICENSE.md  README.md  __init__.py.in  setup.py.in
binder/: Dockerfile  README.md  apt.txt  environment.yml  postBuild  postBuild.template  requirements.txt
code/: README.md  __init__.py.in  debuggingbook_utils  mypy.ini  pycodestyle.cfg  requirements.txt  setup.py.in
docs/: 404.html  CNAME  index.html
docs/beta/: .buildinfo  01_Intro.html  02_Observing.html  02_Tracking.html  03_Dependencies.html  03_Inputs.html  03_Observing.html  04_Abstracting.html  404.html  (+48 more)
full_notebooks/: debuggingbook.bib
html/: custom.css
ipypublish_plugins/: html_ipypublish_chapter.py  latex_ipypublish_book.py  latex_ipypublish_chapter.py
kr-notebooks/: 01_Intro.ipynb  02_Observing.ipynb  03_Dependencies.ipynb  04_Reducing.ipynb  05_Abstracting.ipynb  404.ipynb  Assertions.ipynb  CONTRIBUTING.md  ChangeCounter.ipynb  ChangeDebugger.ipynb  Chapters.ipynb  Debugger.ipynb  DeltaDebugger.ipynb  DynamicInvariants.ipynb  Importing.ipynb  Intro_Debugging.ipynb  PerformanceDebugger.ipynb  README.md  ReleaseNotes.ipynb  Repairer.ipynb  Slicer.ipynb  StatisticalDebugger.ipynb  ThreadDebugger.ipynb  Tracer.ipynb  index.ipynb
mypy/: mypy.ini
notebooks/: 00_Index.ipynb  01_Intro.ipynb  02_Observing.ipynb  02_Tracking.ipynb  03_Dependencies.ipynb  03_Inputs.ipynb  04_Abstracting.ipynb  04_Reducing.ipynb  05_Abstracting.ipynb  05_Repairing.ipynb  06_In_the_Large.ipynb  06_Repairing.ipynb  07_In_the_Large.ipynb  404.ipynb  99_Appendices.ipynb  Alhazen.ipynb  Assertions.ipynb  ChangeCounter.ipynb  ChangeDebugger.ipynb  ChangeExplorer.ipynb  Chapters.ipynb  Chapters.makefile  ClassDiagram.ipynb  ControlFlow.ipynb  Copyright.ipynb  DDSet.ipynb  DDSetDebugger.ipynb  Debugger.ipynb  DeltaDebugger.ipynb  Draft_Second_Project.ipynb  DynamicInvariants.ipynb  ExpectError.ipynb  Guide_for_Authors.ipynb  IllustratedCode.ipynb  Importing.ipynb  Intro_Debugging.ipynb  Invariants.ipynb  PerformanceDebugger.ipynb  Project_of_your_choice.ipynb  RailroadDiagrams.ipynb  (+19 more)
python_code/: LICENSE.md  pycodestyle.cfg  setup.py.in
(+437 files in other folders)
