[build-system]
requires = [
    "setuptools>=73.0.1",
    # "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "debuggingbook"
version = "1.3.2"
authors = [
    { name = "Andreas Zeller", email = "andreas.zeller@cispa.de" },
]
description = "Code for 'The Debugging Book' (https://www.debuggingbook.org/)"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE.md" ]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Education :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security"
]
dependencies = [
    'beautifulsoup4>=4.9.3',
    'diff_match_patch>=20200713',
    'easyplotly>=0.1.3',
    'enforce>=0.3.4',
    'fuzzingbook>=0.8.1',
    'graphviz>=0.14.2',
    'ipython>=7.16.1',
    'lxml>=4.5.1',
    'Markdown>=3.3.4',
    'matplotlib>=3.3.2',
    'multiprocess>=0.70.12.2',
    'nbconvert>=6.0.7',
    'nbformat>=5.0.8',
    'networkx>=2.5',
    'numpy>=2.2.1',
    'pandas>=2.2.3',
    'pydriller>=2.3',
    'pyparsing==2.4.7', # newer versions conflict with bibtexparser
    'pygraphviz>=1.9', # in case of trouble, see https://pygraphviz.github.io/documentation/stable/install.html
    'Pygments>=2.7.1',
    'python-magic>=0.4.18',
    'scikit_learn>=0.23.2',
    'selenium>=3.141.0',
    # showast>=0.2.4
    # showast @ git+https://github.com/andreas-zeller/show_ast.git@andreas
    'showast2>=0.3.2'
]

[tool.setuptools.packages.find]
where = ["python_code", "."]
exclude = ["debuggingbook*"]

[project.urls]
homepage = "https://debuggingbook.org/"
repository = "https://github.com/uds-se/debuggingbook/"
"Bug Tracker" = "https://github.com/uds-se/debuggingbook/issues"

[project.optional-dependencies]
dev = [
    
    "autopep8>=1.5.4",
    "bibtexparser>=1.0.1",
    "entrypoints>=0.3",
    "ipython-genutils>=0.2.0",  # required by (our) ipypublish
    "jupyter>=1.0.0",
    "jupyter-client>=6.1.7",
    "mypy>=0.910",
    "spellchecker>=0.4",
    "testpath>=0.6.0",
    "types-Markdown>=3",
    "types-requests>=2.25.11",
]
binder = [
    "svglib",
    "selenium",
    "valgrind",
    "jupyter_contrib_nbextensions",
    "python-magic"
]
